Add work and study XP - Add my social networks links

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
+    <script src="https://kit.fontawesome.com/5287379681.js" crossorigin="anonymous"></script>
 
     <!-- favicons
     ================================================== -->
@@ -59,10 +60,8 @@
             </ul>
 
             <ul class="header-social">
-                <li><a href="#0"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
-                <li><a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/olivier-portal"><i class="fa-brands fa-github fa-xl"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/olivier-portal/"><i class="fa-brands fa-linkedin fa-xl"></i></a></li>
             </ul>
         </nav>
 
@@ -167,10 +166,10 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">Septembre 2023 - Juillet 2024
+                                <p class="timeline__timeframe">2023 - 2024
                                 </p>
                                 <h3 class="item-title">Lycée professionnel Gaston Darboux, Nîmes</h3>
-                                <h5>Enseignant</h5>
+                                <h5>Enseignant - anglais professionnel</h5>
                             </div>
                             <article class="timeline__desc">
                                 <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
@@ -180,9 +179,9 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">July 2017 - June 2018</p>
-                                <h3 class="item-title">Super Cool Agency</h3>
-                                <h5>Frontend Developer</h5>
+                                <p class="timeline__timeframe">2021 - 2023</p>
+                                <h3 class="item-title">Citynox</h3>
+                                <h5>Assistant ingénieur chef de projet</h5>
                             </div>
                             <article class="timeline__desc">
                                 <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
@@ -192,9 +191,45 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">March 2016 - June 2017</p>
-                                <h3 class="item-title">Epic Design Studio</h3>
-                                <h5>Frontend Developer</h5>
+                                <p class="timeline__timeframe">2018 - 2020</p>
+                                <h3 class="item-title">Freelance</h3>
+                                <h5>Designer - Graphiste - Web designer</h5>
+                            </div>
+                            <article class="timeline__desc">
+                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                            </article>
+                        </div>
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2017 - 2018</p>
+                                <h3 class="item-title">Harmony-DML</h3>
+                                <h5>Designer produit</h5>
+                            </div>
+                            <article class="timeline__desc">
+                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                            </article>
+                        </div>
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2012 - 2017</p>
+                                <h3 class="item-title">Sud Inox</h3>
+                                <h5>Concepteur Industriel</h5>
+                            </div>
+                            <article class="timeline__desc">
+                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                            </article>
+                        </div>
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2006 - 2012</p>
+                                <h3 class="item-title">Neo Vinci</h3>
+                                <h5>Designer industriel - Créateur et gérant Neo Vinci</h5>
                             </div>
                             <article class="timeline__desc">
                                 <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
@@ -214,9 +249,9 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">July 2011 - June 2015</p>
-                                <h3 class="item-title">University of Life</h3>
-                                <h5>Master Degree</h5>
+                                <p class="timeline__timeframe">2024 - En cours</p>
+                                <h3 class="item-title">La Plateforme, Marseille</h3>
+                                <h5>1ère année Bachelor IT - spécialité Cybersécurité</h5>
                             </div>
                             <article class="timeline__desc">
                                 <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
@@ -226,9 +261,9 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">July 2009 - June 2011</p>
-                                <h3 class="item-title">State Design University</h3>
-                                <h5>Bachelor Degree</h5>
+                                <p class="timeline__timeframe">2020 - 2021</p>
+                                <h3 class="item-title">White Rabbit, Clichy</h3>
+                                <h5>Développeur Front-end</h5>
                             </div>
                             <article class="timeline__desc">
                                 <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
@@ -238,9 +273,33 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">July 2005 - June 2009</p>
-                                <h3 class="item-title">School of Hard Knocks</h3>
-                                <h5>Bachelor Degree</h5>
+                                <p class="timeline__timeframe">2018 - 2019</p>
+                                <h3 class="item-title">Digital Campus, Montpellier</h3>
+                                <h5>Chef de projet multimédia</h5>
+                            </div>
+                            <article class="timeline__desc">
+                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                            </article>
+                        </div>
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2003 - 2005</p>
+                                <h3 class="item-title">Créapole, Paris</h3>
+                                <h5>Design Produit</h5>
+                            </div>
+                            <article class="timeline__desc">
+                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                            </article>
+                        </div>
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2000 - 2003</p>
+                                <h3 class="item-title">RMIT University, Melbourne Australie</h3>
+                                <h5>Product design</h5>
                             </div>
                             <article class="timeline__desc">
                                 <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
@@ -264,10 +323,10 @@
 
         <div class="row heading-block heading-block--center" data-aos="fade-up">
             <article class="column large-full">
-                <h2 class="section-heading section-heading--centerbottom">Capabilities</h2>
+                <h2 class="section-heading section-heading--centerbottom">Compétences</h2>
 
                 <p class="section-desc">
-                    My passion and goal is to help you make your business standout.
+                    Mon but et ma passion est de faire de votre entreprise un sanctuaire.
                 </p>
             </article>
         </div> <!-- end heading-block -->
@@ -276,7 +335,7 @@
 
             <article class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
-                    <h4 class="item-title">Brand Identity</h4>
+                    <h4 class="item-title">Web design</h4>
                     <p>
                     Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
                     a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
@@ -287,7 +346,7 @@
 
             <div class="column item-service" data-aos="fade-up">
                 <article class="item-service__content">
-                    <h4 class="item-title">Illustration</h4>
+                    <h4 class="item-title">Intégration web</h4>
                     <p>
                     Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
                     a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
@@ -298,7 +357,7 @@
 
             <div class="column item-service" data-aos="fade-up">
                 <article class="item-service__content">
-                    <h4 class="item-title">Web Design</h4>
+                    <h4 class="item-title">Cybersécurité</h4>
                     <p>
                     Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
                     a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
@@ -307,9 +366,9 @@
                 </article>
             </div>
 
-            <div class="column item-service" data-aos="fade-up">
+            <!-- <div class="column item-service" data-aos="fade-up">
                 <article class="item-service__content">
-                    <h4 class="item-title">Product Strategy</h4>
+                    <h4 class="item-title">Réseau</h4>
                     <p>
                     Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
                     a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
@@ -338,7 +397,7 @@
                     asperiores est commodi amet quia architecto. Dolores necessitatibus et.
                     </p>
                 </article>
-            </div>
+            </div> -->
 
         </div> <!-- end services-list -->
 
@@ -352,7 +411,7 @@
         <div class="row heading-block heading-block--center" data-aos="fade-up">
             <div class="column large-full">
                 <h2 class="section-desc">
-                    Vous avez d'un alterant fiable, motivé avec de fortes compétences transversales?
+                    Vous avez besoin d'un alterant fiable, motivé avec de fortes compétences transversales?
                 </h2>
             </div>
         </div> <!-- end heading-block -->
