--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <ul class="header-social">
                 <li><a href="https://github.com/olivier-portal"><i class="fa-brands fa-github fa-xl"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/olivier-portal/"><i class="fa-brands fa-linkedin fa-xl"></i></a></li>
+                <li><a href="https://join.slack.com/t/laplateformeo-vbr4144/shared_invite/zt-2uwdtysvl-GZVBrKeuh5x82MTypwcDzg"><i class="fa-brands fa-slack fa-xl"></i></a></li>
             </ul>
         </nav>
 
