Add presentation text and modify the section About me

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="row intro-content">
 
             <div class="column large-9 mob-full intro-text">
-                <h3>Hello World, Je suis Olivier Portal!</h3>
+                <h3>Hello World, Je suis Olivier Portal !</h3>
                 <h1>
                     Etudiant en Cybersécurité <br>
                     Bachelor IT <br>
@@ -114,24 +114,12 @@
 
             <div class="row about-me__content" data-aos="fade-up">
                 <article class="column large-full about-me__text">
-                    <h2 class="about-me_title">Parcours et passion pour le design</h2>
                     <p class="lead">
-                    Avec une solide expérience en tant que designer industriel, graphiste, et web designer, je me suis toujours investi dans la création de solutions esthétiques et fonctionnelles. Chaque projet que j'entreprends est guidé par une passion pour le détail et l'innovation, alliant créativité et pragmatisme pour répondre aux besoins des clients et utilisateurs.
+                        Passionné par l'univers de l'informatique et de la cybersécurité, je suis <b class="strong-color">actuellement en première année de bachelor IT spécialisé en cybersécurité.</b> À travers mon parcours, j'ai développé un vif intérêt pour les réseaux, le hacking éthique et la configuration de systèmes innovants.
                     </p>
 
-                    <h2 class="about-me_title">Une nouvelle direction vers la cybersécurité</h2>
-                    <p>
-                    Récemment, j'ai décidé de me lancer un nouveau défi en reprenant mes études dans le domaine de l'informatique, avec une spécialisation en cybersécurité. Cette transition est motivée par ma fascination pour les nouvelles technologies et le besoin croissant de protéger les données dans un monde digitalisé. Ce choix enrichit mon parcours de designer avec une perspective unique, combinant sécurité et design.
-                    </p>
-
-                    <h2 class="about-me_title">Objectif : une alternance pour allier théorie et pratique</h2>
-                    <p >
-                    Actuellement en première année de bachelor IT spécialisé en cybersécurité, je cherche une alternance sur un rythme d’une semaine en école et quatre semaines en entreprise. Cette expérience me permettrait de mettre en pratique mes compétences en cybersécurité, tout en bénéficiant de l'accompagnement et des conseils d'experts du secteur. Travailler en entreprise renforcerait également ma compréhension des enjeux de sécurité pour des projets réels et me permettrait d'apporter ma contribution dès le début de ma formation.
-                    </p>
-
-                    <h2 class="about-me_title">Un profil polyvalent et prêt à s’investir</h2>
-                    <p>
-                    Fort de mon parcours en design industriel et numérique, je suis polyvalent, adaptable et passionné par l'innovation. J’apporte une perspective unique qui associe un sens esthétique développé à une approche rigoureuse des questions de sécurité informatique. En rejoignant votre équipe, je suis prêt à m’investir pleinement pour apporter mes compétences, tout en développant mon expertise dans un cadre professionnel stimulant.
+                    <p class="lead">
+                        Actuellement à la <b class="strong-color">recherche d'une alternance sur un rythme d'une semaine en cours et quatre semaines en entreprise.</b> Cette opportunité me permettrait de mettre en pratique mes compétences, d’approfondir mes connaissances, et de contribuer à des projets concrets dans le domaine de la cybersécurité.
                     </p>
                 </article>
             </div>
@@ -336,22 +324,18 @@
 
             <article class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
-                    <h4 class="item-title">Web design</h4>
+                    <h4 class="item-title">Design et créativité</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                    Avec une solide expérience en tant que designer industriel, graphiste, et web designer, je me suis toujours investi dans la création de solutions esthétiques et fonctionnelles. Chaque projet que j'entreprends est guidé par une passion pour le détail et l'innovation, alliant créativité et pragmatisme pour répondre aux besoins des clients et utilisateurs.
                     </p>
                 </div>
             </article>
 
             <div class="column item-service" data-aos="fade-up">
                 <article class="item-service__content">
-                    <h4 class="item-title">Intégration web</h4>
+                    <h4 class="item-title">Réseaux</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                    A partir d'un Raspberry Pi, je me suis fabriqué un miroir intelligent tactile qui me permet d'afficher le date, le temps qu'il fait, les actualités... Je peux aussi jouer ma musique favorite ou afficher des photos de familles. Lorsque je l'éteins, il ressemble à un miroir comme les autres.
                     </p>
                 </article>
             </div>
@@ -360,45 +344,10 @@
                 <article class="item-service__content">
                     <h4 class="item-title">Cybersécurité</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                    L'un de mes projets personnel récents a consisté à configurer un Raspberry Pi pour renforcer la sécurité de mon réseau Wi-Fi domestique. J'y ai intégré un routeur, un pare-feu, un VPN et un IDS, démontrant ma capacité à concevoir des solutions concrètes et sécurisées adaptées aux besoins réels.
                     </p>
                 </article>
             </div>
-
-            <!-- <div class="column item-service" data-aos="fade-up">
-                <article class="item-service__content">
-                    <h4 class="item-title">Réseau</h4>
-                    <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
-                    </p>
-                </article>
-            </div>
-
-            <div class="column item-service" data-aos="fade-up">
-                <article class="item-service__content">
-                    <h4 class="item-title">UI/UX Design</h4>
-                    <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
-                    </p>
-                </article>
-            </div>
-
-            <div class="column item-service" data-aos="fade-up">
-                <article class="item-service__content">
-                    <h4 class="item-title">Mobile Design</h4>
-                    <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
-                    </p>
-                </article>
-            </div> -->
 
         </div> <!-- end services-list -->
 
