Add explaination text and modify About me's section

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <article class="item-service__content">
                     <h4 class="item-title">Réseaux</h4>
                     <p>
-                    A partir d'un Raspberry Pi, je me suis fabriqué un miroir intelligent tactile qui me permet d'afficher le date, le temps qu'il fait, les actualités... Je peux aussi jouer ma musique favorite ou afficher des photos de familles. Lorsque je l'éteins, il ressemble à un miroir comme les autres.
+                    A partir d'un Raspberry Pi, je me suis fabriqué un miroir intelligent tactile qui me permet d'afficher la date, le temps qu'il fait, les actualités... Je peux aussi jouer ma musique favorite ou afficher des photos de familles. Lorsque je l'éteins, il ressemble à un miroir comme les autres.
                     </p>
                 </article>
             </div>
@@ -361,7 +361,7 @@
         <div class="row heading-block heading-block--center" data-aos="fade-up">
             <div class="column large-full">
                 <h2 class="section-desc">
-                    Vous avez besoin d'un alterant fiable, motivé avec de fortes compétences transversales?
+                    Vous avez besoin d'un alternant fiable, motivé avec de fortes compétences transversales?
                 </h2>
             </div>
         </div> <!-- end heading-block -->
@@ -386,10 +386,9 @@
 
         <article class="row heading-block heading-block--center" data-aos="fade-up">
             <div class="column large-full">
-                <h2 class="section-heading section-heading--centerbottom">Selected Works</h2>
+                <h2 class="section-heading section-heading--centerbottom">Quelques projets</h2>
                 <p class="section-desc">
-                    Here are some of my selected works I have done lately. Feel free to 
-                    check them out.
+                    Voici des projets que j'ai réalisé dernièrement. 
                 </p>
             </div>
         </article> <!-- end heading-block -->
