add colors on text and logos:hover state

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <div class="column large-full">
                 <h2 class="section-heading section-heading--centerbottom">Quelques projets</h2>
                 <p class="section-desc">
-                    Voici des projets que j'ai réalisé dernièrement. 
+                    Voici des projets que j'ai réalisé dernièrement. N'hésitez pas à y jeter un oeil !
                 </p>
             </div>
         </article> <!-- end heading-block -->
