Filled sections and addd quotess and social media links

--- a/index.html
+++ b/index.html
@@ -557,40 +557,37 @@
             <div class="column large-full testimonials__slider">
 
                 <div class="testimonials__slide">
-                    <p>Molestiae incidunt consequatur quis ipsa autem nam sit enim magni. Voluptas tempore rem. 
-                    Explicabo a quaerat sint autem dolore ducimus ut consequatur neque.  Nisi dolores quaerat fuga rem nihil nostrum.
-                    Laudantium quia consequatur molestias delectus culpa.</p>
+                    <p>En vérité, l’histoire moderne a démontré qu’une société de gens courageux prêts à admettre leur ignorance et à soulever des questions difficiles est habituellement plus prospère mais aussi plus pacifique que les sociétés où tout le monde accepte aveuglément une seule réponse.</p>
                     <div class="testimonials__info">
-                        <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
+                        <img src="images/avatars/Yuval Noah Harari.jpg" alt="Author image" class="testimonials__avatar">
                         <cite class="testimonials__cite">
-                            <strong>Tim Cook</strong>
-                            <span>CEO, Apple</span>
+                            <strong>Yuval Noah Harari</strong>
+                            <span>Historien</span>
                         </cite>
                     </div>
                 </div> <!-- end testimonials__slide -->
 
                 <div class="testimonials__slide">
-                    <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                    Nisi eaque consequatur. Voluptatem dignissimos ut ducimus accusantium perspiciatis.
-                        Quasi voluptas eius distinctio. Atque eos maxime.</p>
+                    <p>Il faut une grande maturité pour comprendre que l'opinion que nous défendons n'est que notre hypothèse préférée, nécessairement imparfaite, probablement transitoire, que seuls les très bornés peuvent faire passer pour une certitude ou une vérité.</p>
                     <div class="testimonials__info">
-                        <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
+                        <img src="images/avatars/AVT_Milan-Kundera_7589.webp" alt="Author image" class="testimonials__avatar">
                         <cite class="testimonials__cite">
-                            <strong>Sundar Pichai</strong>
-                            <span>CEO, Google</span>
+                            <strong>Milan Kundera</strong>
+                            <span>Romancier</span>
                         </cite>
                     </div>
                 </div> <!-- end testimonials__slide -->
 
                 <div class="testimonials__slide">
-                    <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.  
-                    Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.
-                    Voluptatem dignissimos ut.</p>
+                    <p>Je vous salue, névrosés !
+                        Parce que vous êtes sensibles dans un monde insensible, n’avez aucune certitude dans un monde pétri de certitudes,
+                        parce que vous ressentez les autres comme s’ils étaient vous-mêmes,
+                        parce que vous ressentez l’anxiété du monde et son étroitesse sans fond et sa suffisance...</p>
                     <div class="testimonials__info">
-                        <img src="images/avatars/user-04.jpg" alt="Author image" class="testimonials__avatar">
+                        <img src="images/avatars/AVT_Kazimierz-Dabrowski_2060.webp" alt="Author image" class="testimonials__avatar">
                         <cite class="testimonials__cite">
-                            <strong>Satya Nadella</strong>
-                            <span>CEO, Microsoft</span>
+                            <strong>Kazimierz Dąbrowski</strong>
+                            <span>Psychiatre et psychologue</span>
                         </cite>
                     </div>
                 </div> <!-- end testimonials__slide -->
@@ -608,7 +605,7 @@
 
         <div class="row heading-block" data-aos="fade-up">
             <div class="column large-full">
-                <h2 class="section-heading">Get In Touch</h2>
+                <h2 class="section-heading">Restons en contact</h2>
             </div>
         </div>
 
@@ -619,8 +616,7 @@
                 </p>
 
                 <p class="section-desc">
-                I'm happy to connect, listen and help. Let's work together and build
-                something awesome. Let's turn your idea to an even greater product.
+                    Je serai heureux de vous rencontrer, vous écouter et vous aider. Travaillons ensemble et construisons quelque chose de génial.
                 <a href="mailto:olivierportal09@gmail.com">Contactez moi</a>.
                 </p>
             </div>
@@ -636,9 +632,9 @@
             <div class="column large-7 medium-full contact-social">
                 <h4>Social</h4>
                 <ul>
-                    <li><a href="#0" title="Facebook">Facebook</a></li>
-                    <li><a href="#0" title="Twitter">Twitter</a></li>
-                    <li><a href="#0" title="Instagram">Instagram</a></li>
+                    <li><a href="https://github.com/olivier-portal" title="Github">Github</a></li>
+                    <li><a href="https://www.linkedin.com/in/olivier-portal/" title="Linkedin">Linkedin</a></li>
+                    <li><a href="https://join.slack.com/t/laplateformeo-vbr4144/shared_invite/zt-2uwdtysvl-GZVBrKeuh5x82MTypwcDzg" title="Slack">Slack</a></li>
                 </ul>
             </div>
 
